arrow down to link, projects visible, broken images fixed?, techstack cleaned up

--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -8,6 +8,7 @@
   top: 0;
   display: flex;
   z-index: 1100;
+  transition: top 0.4s;
 }
 #navbar img{
   height: 80px;
